# social_ecosystem_analyser_yt_microservice

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  conftest.py  creds.data  data.json  docker-compose.dev.yml  docker-compose.yml  justfile  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: cd.yml  ci.yml
scripts/: entrypoint.sh
src/main/python/SocialEcosystemAnalyser/: __init__.py  database_management.py  social_ecosystem_analyser.py  social_ecosystem_analyser_examination.py  social_ecosystem_analyser_exception.py
src/main/python/SocialEcosystemAnalyser/database/: database_management.py
src/main/python/SocialEcosystemAnalyser/exceptions/: social_ecosystem_analyser_exception.py  social_ecosystem_analyser_messages.py
src/main/python/SocialEcosystemAnalyser/nlp/: __init__.py  nlp.py  similar_topics_generation.py  text_analysis_score.py
src/main/python/WeirdEnviromentsAnalysis/: __init__.py  database_management.py  singleton_metaclass.py  weird_enviroments_analysis_exception.py
src/tests/python/: test_check_url.py  test_database_management.py  test_similar_topics_generation.py  test_singleton_tests.py  test_youtube_api.py
src/tests/python/TestSocialEcosystemAnalyser/: test_check_url.py  test_database_management.py  test_health_api.py  test_report_api.py  test_similar_topics_generation.py  test_singleton_tests.py  test_social_ecosystem_exception.py  test_text_analysis_score.py  test_topics_api.py  test_urls.py  test_videos_api.py  test_virustotal_report_api.py  test_youtube_api.py
src/tests/python/fixtures/: cohere.py  database.py  general.py  virustotal.py  youtube.py
src/unittest/python/: test_check_url.py  test_database_management.py  test_similar_topics_generation.py  test_singleton_tests.py  test_youtube_api.py
(+30 files in other folders)
