[tool.poetry]
name = "tfg"
version = "0.1.0"
description = ""
authors = ["DaniFdz <danifernandezzzzzz@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pymongo = "^4.6.1"
python-decouple = "^3.8"
requests = "^2.31.0"
cohere = "^4.39"
virustotal-api = "^1.1.11"
icecream = "^2.1.3"
langdetect = "^1.0.9"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
