[tool.poetry]
name = "social_ecosystem_analyser"
version = "0.0.1"
description = ""
authors = ["DaniFdz <danifernandezzzzzz@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pymongo = "^4.6.1"
python-decouple = "^3.8"
requests = "^2.31.0"
cohere = "^4.39"
virustotal-api = "^1.1.11"
icecream = "^2.1.3"
langdetect = "^1.0.9"
coverage = "^7.4.1"
pytest-mock = "^3.12.0"
python-dotenv = "^1.0.1"
scipy = "^1.14.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
pytest-xdist = "^3.5.0"
pytest-dotenv = "^0.5.2"

[tool.pytest.ini_options]
python_files = "test_*.py"
testpaths = ["src/tests"]
filterwarnings = "ignore::DeprecationWarning:^(?!node\\.).*:"
pythonpath = "."
env_files = [".env"]
markers = [
    "database: tests that involves database interaction",
    "api: tests that involves some external api interaction",
    "unittest: tests that are unit tests",
    "integration: tests that are integration tests",
]

[tool.coverage.run]
omit = ["*/tests/*", "*/fixtures/*", "*/__init__.py"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
